updated editorconfig for html and css

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,5 @@
-{{- define "title" -}}
-Quiet HackerNews
-{{- end -}}
+{{- define "title" -}} Quiet HackerNews {{- end -}} 
 
 {{- define "content" }}
-<div class="bubble">
-Index Page 2
-</div>
+<div class="bubble">Index Page 2</div>
 {{- end }}
