--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   background-color: #f5f5f7;
   color: #333333;
   font-weight: 400;
