--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
   <header>
     <div class="container">
       <div id="site-title">
-        <span>Quiet HackerNews</span>
+        <span>🫥 Quiet HackerNews</span>
       </div>
     </div>
   </header>
