--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,20 @@
 body {
-  font-family: Roboto, sans-serif;
+  margin: 0;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    avenir next,
+    avenir,
+    segoe ui,
+    helvetica neue,
+    Adwaita Sans,
+    Cantarell,
+    Ubuntu,
+    roboto,
+    noto,
+    helvetica,
+    arial,
+    sans-serif;
   background-color: #f5f5f7;
   color: #333333;
   font-weight: 400;
@@ -15,6 +30,9 @@ body {
 .list-view {
   background-color: #ffffff;
   border-radius: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 .list-view > .item {
@@ -22,17 +40,69 @@ body {
   padding: 20px 40px;
 }
 
+.list-view > .item:first-child {
+  border-top: 0;
+}
+
 .bubble {
   background-color: #ffffff;
   border-radius: 10px;
   padding: 20px 40px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .btn {
   background-color: #e2e2e4;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 #site-title {
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 500;
+}
+
+header {
+  background-color: #fff;
+  margin-bottom: 20px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+header > .container {
+  padding: 15px 10px;
+}
+
+@media (max-width: 805px) {
+  .container {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .list-view > .item {
+    padding: 20px 20px;
+  }
+
+  .bubble {
+    padding: 20px 20px;
+  }
+}
+
+a {
+  color: #333333;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.dimmed {
+  color: #888888;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  line-height: 1.2;
 }
